Fix some spacings

--- a/public/less/about.less
+++ b/public/less/about.less
@@ -2,24 +2,11 @@
   margin:0 auto;
   overflow:hidden;
   width:90%;
-  .left-container {
-    width:50%;
-    text-align:justify;
+
+  .column {
+    padding: 10px;
   }
-  ul {
-    padding-left:15px;
-  }
-  .right-container {
-    padding:10px;
-    display:inline-block;
-    width:50%;
-    ul li {
-      list-style:none;
-    }
-    .alert {
-      max-width:500px;
-    }
-  }
+
   .about-title {
     padding-left:10px;
   }
