--- a/public/less/contacts.less
+++ b/public/less/contacts.less
@@ -7,18 +7,11 @@
    overflow:hidden;
    width:90%;
    padding-top:10px;
-   .left-container {
-     padding:10px;
-     width:40%;
+
+   .column {
+     padding: 10px;
    }
-   .right-container {
-     padding:10px;
-     display:inline-block;
-     width:60%;
-     .slider-container {
-       width:650px;
-     }
-   }
+   
    .address li {
      list-style:none;
    }
