--- a/public/less/template.less
+++ b/public/less/template.less
@@ -67,6 +67,11 @@ ul {
     -moz-box-sizing:border-box;
   }
 }
+
+.main-container {
+  padding: 10px;
+}
+
 .main-container .about-sinais-items {
   margin:0px;
   padding:0px;
